# gpx-art

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  QUESTIONS.md  README.md  REVIEW.md  ROADMAP.md  TODO.md  gists.db  pyproject.toml  requirements.txt  reviews.csv
.claude/: settings.local.json
airflow-streamlit/: gpx_to_image.py
docs/: architecture.md  artistic-direction.md  scripts.md  usage.md
scripts/: abstract-variations.py  abstract.py  brush.py  curves.py  drawutils.py  dtw-select.py  geo-bauhaus.py  geo-crystal.py  geo-fractal.py  geo-golden.py  geo-grid.py  geo-mandala.py  geo-memphis.py  geo-origami.py  geo-polygon.py  geo-prism.py  geometric.py  gist.py  gpx-art.py  impressionist.py  line-variations.py  lines.py  painting.py  plot-gpx.py  plot.py  review.py  select-gpx.py  simplify.py  utils.py  vertical.py  zen-breath.py  zen-calligraphy.py  zen-dots.py  zen-minimal.py  zen-ripples.py  zen-stones.py  zen.py  zoom.py
tests/: _module_loader.py  test_dtw_select_core.py  test_gist.py  test_gpx_art_core.py  test_utils.py
