[project]
name = "gpx-art"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gpxpy",
    "pandas",
    "matplotlib",
    "numpy",
    "shapely",
    "pillow",
    "scipy",
    "qrcode",
    "python-dotenv",
    "requests",
    "fastdtw",
    "defusedxml>=0.7.1",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 99
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RET", "S"]
ignore = ["E501", "B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"scripts/gpx-art.py" = ["S311"]


[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "fastdtw.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
    "scipy-stubs>=1.17.1.5",
    "types-defusedxml>=0.7.0.20260504",
    "types-qrcode>=8.2.0.20260518",
]
